tests/ui/diagnostic_namespace/requires_path.stderr
error: Diagnostic attributes requires a path with 2 segments
  --> $DIR/requires_path.rs:4:3
   |
LL | #[diagnostic]
   |   ^^^^^^^^^^

error: Diagnostic attributes requires a path with 2 segments
  --> $DIR/requires_path.rs:4:3
   |
LL | #[diagnostic]
   |   ^^^^^^^^^^

error: cannot find attribute `diagnostic` in this scope
  --> $DIR/requires_path.rs:4:3
   |
LL | #[diagnostic]
   |   ^^^^^^^^^^

error: aborting due to 3 previous errors

